showcase h1, content-wrap, fixing index header

--- a/24-grid-css-responsive/style.css
+++ b/24-grid-css-responsive/style.css
@@ -58,4 +58,14 @@ p {
 	width: 100%;
 	height: 450px;
 	z-index: -1;
+	opacity: 0.3;
+}
+
+#showcase h1{
+	padding-top: 100px;
+	padding-bottom: 0;
+}
+
+#showcase .content-wrap {
+	padding: 0 1.5em;
 }
